--- a/trunk/eid-archetype-seam/pom.xml
+++ b/trunk/eid-archetype-seam/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>eid-archetype</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<name>eID/Seam2.2/JSF1.2/EJB3.0/JPA1.0/RichFaces3.3/Facelets/JBoss5.1-6.0</name>
+	<name>eID/Seam2.2/JSF1.2/EJB3.0/JPA1.0/RichFaces3.3/Facelets/JBoss5.1-6.0-6.1</name>
 	<groupId>be.fedict.eid-archetype</groupId>
 	<artifactId>eid-archetype-seam</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
