--- a/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
@@ -16,12 +16,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>2.1.1</version>
+					<version>2.2</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-ear-plugin</artifactId>
-					<version>2.6</version>
+					<version>2.7</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -36,12 +36,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.2</version>
+					<version>2.4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.3.1</version>
+					<version>2.4</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -118,7 +118,7 @@
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
-				<version>1.5</version>
+				<version>1.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.ejb3</groupId>
@@ -188,7 +188,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.8.2</version>
+				<version>4.9</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-logging</groupId>
@@ -256,7 +256,7 @@
 		</repository>
 		<repository>
 			<id>shibboleth</id>
-			<url>http://shibboleth.internet2.edu/downloads/maven2/</url>
+			<url>https://shibboleth.net/nexus/content/repositories/releases/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -277,10 +277,10 @@
 	</repositories>
 
 	<properties>
-		<eid-applet.version>1.0.4.Beta4</eid-applet.version>
+		<eid-applet.version>1.0.5.Beta5</eid-applet.version>
 		<richfaces.version>3.3.3.Final</richfaces.version>
 		<seam.version>2.2.2.Final</seam.version>
-		<eid-idp.version>1.0.0.RC6</eid-idp.version>
+		<eid-idp.version>1.0.1.Beta7</eid-idp.version>
 	</properties>
 
 	<profiles>
