--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -80,13 +80,6 @@
 				<version>${eid-idp.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.richfaces</groupId>
-				<artifactId>richfaces-bom</artifactId>
-				<version>4.1.0.Final</version>
-				<scope>import</scope>
-				<type>pom</type>
-			</dependency>
-			<dependency>
 				<groupId>javax</groupId>
 				<artifactId>javaee-api</artifactId>
 				<version>6.0</version>
@@ -95,13 +88,6 @@
 				<groupId>javax</groupId>
 				<artifactId>javaee-web-api</artifactId>
 				<version>6.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.seam</groupId>
-				<artifactId>seam-bom</artifactId>
-				<version>${seam.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.ocpsoft</groupId>
@@ -122,6 +108,11 @@
 				<groupId>org.jboss.logging</groupId>
 				<artifactId>jboss-logging</artifactId>
 				<version>3.0.1.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>org.primefaces</groupId>
+				<artifactId>primefaces</artifactId>
+				<version>3.3.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -158,18 +149,9 @@
 			</snapshots>
 		</repository>
 		<repository>
-			<id>ow2-maven-repo</id>
-			<url>http://maven.ow2.org/maven2/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>shibboleth</id>
-			<url>http://shibboleth.internet2.edu/downloads/maven2/</url>
+			<id>prime-repo</id>
+			<name>Prime Repo</name>
+			<url>http://repository.primefaces.org</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -203,9 +185,8 @@
 	</pluginRepositories>
 
 	<properties>
-		<eid-applet.version>1.0.5.Beta1</eid-applet.version>
-		<eid-idp.version>1.0.0.RC6</eid-idp.version>
-		<seam.version>3.1.0.Final</seam.version>
+		<eid-applet.version>1.0.5-SNAPSHOT</eid-applet.version>
+		<eid-idp.version>1.0.1.Beta7</eid-idp.version>
 	</properties>
 
 	<profiles>
