--- a/eid-archetype-javaee6/pom.xml
+++ b/eid-archetype-javaee6/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>eid-archetype</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<name>eID/JSF2.0/EJB3.1/JPA2.0/CDI1.0/Seam3.1/RichFaces4.1</name>
+	<name>eID/JSF2.0/EJB3.1/JPA2.0/CDI1.0/PrimeFaces3.3</name>
 	<groupId>be.fedict.eid-archetype</groupId>
 	<artifactId>eid-archetype-javaee6</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
