--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -33,8 +33,9 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-archetype-plugin</artifactId>
-					<version>2.0</version>
+					<version>2.2</version>
 					<extensions>true</extensions>
 				</plugin>
 			</plugins>
@@ -43,7 +44,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.2.1</version>
+				<version>2.3.2</version>
 				<configuration>
 					<tagBase>https://eid-archetype.googlecode.com/svn/tags/</tagBase>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
@@ -54,7 +55,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>1.0</version>
+				<version>2.2</version>
 			</extension>
 		</extensions>
 	</build>
