--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -138,6 +138,11 @@
 				<artifactId>primefaces</artifactId>
 				<version>3.3.1</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.xalan</groupId>
+				<artifactId>xalan</artifactId>
+				<version>2.7.1-1.jbossorg</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
