--- a/eid-archetype-javaee6/pom.xml
+++ b/eid-archetype-javaee6/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>be.fedict</groupId>
 		<artifactId>eid-archetype</artifactId>
-		<version>1.0.0.RC5</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<name>eID/JSF2.0/EJB3.1/JPA2.0/CDI1.0/PrimeFaces3.3</name>
 	<groupId>be.fedict.eid-archetype</groupId>
