--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -198,6 +198,16 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>shibboleth.net</id>
+			<url>https://build.shibboleth.net/nexus/content/groups/public/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<pluginRepositories>
